<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.authorizationapp.view.SplashFragment"
        android:label="@string/splashFragmentLabel"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_splashFragment_to_autorizationFragment"
            app:popUpTo="@id/nav_graph"
            app:launchSingleTop="true" app:popUpToInclusive="true"
            app:destination="@id/authorizationFragment" />
        <action
            android:id="@+id/action_splashFragment_to_mainFragment"
            app:popUpTo="@id/nav_graph"
            app:launchSingleTop="true" app:popUpToInclusive="true"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/authorizationFragment"
        android:name="com.example.authorizationapp.view.AuthorizationFragment"
        android:label="@string/authorizationFragmentLabel"
        tools:layout="@layout/fragment_authorization">

<!--        <action-->
<!--            android:id="@+id/action_SecondFragment_to_FirstFragment"-->
<!--            app:destination="@id/FirstFragment" />-->
        <action
            android:id="@+id/action_authorizationFragment_to_mainFragment"
            app:popUpTo="@id/nav_graph"
            app:launchSingleTop="true" app:popUpToInclusive="true"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.authorizationapp.view.MainFragment"
        android:label="@string/mainFragmentLabel"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_authorizationFragment"
            app:popUpTo="@id/nav_graph"
            app:launchSingleTop="true" app:popUpToInclusive="true"
            app:destination="@id/authorizationFragment" />
    </fragment>
</navigation>