<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".view.AuthorizationFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal"
        app:layout_constraintGuide_begin="150dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="32dp" android:ems="16" android:importantForAutofill="no"
        android:hint="@string/email" android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="32dp" android:ems="16" android:importantForAutofill="no"
        android:hint="@string/password" android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/signIn" android:textAppearance="?android:attr/textAppearanceMedium" android:enabled="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>